@@ -468,6 +468,10 @@ ldmain.o: ldmain.c config.status
 	  -DTARGET='"@target@"' @TARGET_SYSTEM_ROOT_DEFINE@ \
 	  $(srcdir)/ldmain.c
 
+eelf32_spu.o: eelf32_spu.c
+	$(COMPILE) -c -DEMBEDSPU="\"`echo embedspu | sed '$(transform)'`\"" \
+	  eelf32_spu.c
+
 ldemul-list.h: Makefile
 	(echo "/* This file is automatically generated.  DO NOT EDIT! */";\
 	for f in `echo " " ${EMULATION_OFILES} "" \
